CRUD de educacion, experiencia y skill completo

--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -146,6 +146,7 @@
                                         [disabled]="addForm.invalid"
                                         type="submit"
                                         class="btn btn-primary"
+                                        data-bs-dismiss="modal"
                                         >
                                         Añadir
                                 </button>
