--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,23 +1,318 @@
 <section class="resume-section" id="experience">
-    <div class="resume-section-content">
+    <div class="resume-section-content" id="main-experience-container">
         <h2 class="mb-5">Experience</h2>
         <div class="text-center">
-            <button  type="button" class="btn btn-success">
-                <a class="nav-link" style="color:white">
-                    Añadir experiencia <span class="sr-only">(current)</span>
-                </a>
+            <button 
+                type="button" 
+                class="btn btn-success" 
+                data-bs-toggle="modal" 
+                data-bs-whatever="@fat"
+                (click)="onOpenModal('add')">
+                Añadir experiencia
             </button>
         </div>
         <ul>
-            <li style="list-style:none" *ngFor="let experience of experienceList">
+            <li style="list-style:none" *ngFor="let expe of experience">
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">{{experience.position}}</h3>
-                        <div class="subheading mb-3">{{experience.company}}</div>
+                        <h3 class="mb-0">{{expe.position}}</h3>
+                        <div class="subheading mb-3">{{expe.companyName}}</div>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">{{experience.start}} - {{experience.end}}</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">{{expe.start}} - {{expe.end}}</span></div> 
                 </div>
+                <div>
+                    <a
+                        (click)="onOpenModal('edit',expe)"
+                        class="btn btn-primary tooltips"
+                        data-placement="top"
+                        data-toggle="tooltip"
+                        data-original-title="Edit">
+                        <i class="fa fa-edit"></i>
+                    </a>
+                    <a
+                        (click)="onOpenModal('delete', expe)"
+                        class="btn btn-secondary tooltips"
+                        data-placement="top"
+                        data-toggle="tooltip"
+                        data-original-title="Delete">
+                        <i class="fa fa-times"></i>
+                    </a>
+               </div>
             </li>
         </ul>
+    </div>
+    <!--Modal Add Experience-->
+    <div    
+        class="modal fade" 
+        id="addExperienceModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="addExperienceModalLabel" 
+        aria-hidden="true"
+        >
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 
+                            class="modal-title" 
+                            id="addExperienceModalLabel">
+                            Añadir experiencia
+                        </h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="close"
+                            ></button>
+                    </div>
+                    <div class="modal-body">
+                        <form #addForm="ngForm" (ngSubmit)="onAddExperience(addForm)">
+                            <div class="form-group">
+                                <label for="companyName">Nombre de la compañia:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="companyName"
+                                        class="form-control"
+                                        id="companyName"
+                                        placeholder="Nombre"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="position">Posición:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="position"
+                                        class="form-control"
+                                        id="position"
+                                        placeholder="Posición"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="start">Inicio:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="start"
+                                        class="form-control"
+                                        id="start"
+                                        placeholder="Inicio"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="end">Fin:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="end"
+                                        class="form-control"
+                                        id="end"
+                                        placeholder="Fin"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Descripción:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="description"
+                                        class="form-control"
+                                        id="description"
+                                        placeholder="Descripción"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="url_photo">URL de imagen:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="url_photo"
+                                        class="form-control"
+                                        id="url_photo"
+                                        placeholder="URL de imagen"
+                                        required
+                                        >
+                            </div>
+                            <div class="modal-footer">
+                                <button
+                                        type="button"
+                                        id="add-education-form"
+                                        class="btn btn-secondary"
+                                        data-bs-dismiss="modal"
+                                        >
+                                        Cerrar
+                                </button>
+                                <button
+                                        [disabled]="addForm.invalid"
+                                        type="submit"
+                                        class="btn btn-primary"
+                                        data-bs-dismiss="modal"
+                                        >
+                                        Añadir
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!--Modal Edit Experience-->
+    <div    
+        class="modal fade" 
+        id="editExperienceModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="editExperienceModalLabel" 
+        aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 
+                            class="modal-title" 
+                            id="editExperienceModalLabel">
+                            Editar experiencia - {{editExperience?.companyName}} -[{{editExperience?.id}}]
+                        </h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="close"
+                            ></button>
+                    </div>
+                    <div class="modal-body">
+                        <form #addForm="ngForm" (ngSubmit)="onAddExperience(addForm)">
+                            <div class="form-group">
+                                <label for="companyName">Nombre de la compañia:</label>
+                                <input type="text"
+                                        ngModel="{{editExperience?.companyName}}"
+                                        name="companyName"
+                                        class="form-control"
+                                        id="companyName"
+                                        placeholder="Nombre"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="position">Posición:</label>
+                                <input type="text"
+                                        ngModel="{{editExperience?.position}}"
+                                        name="position"
+                                        class="form-control"
+                                        id="position"
+                                        placeholder="Posición"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="start">Inicio:</label>
+                                <input type="text"
+                                        ngModel="{{editExperience?.start}}"
+                                        name="start"
+                                        class="form-control"
+                                        id="start"
+                                        placeholder="Inicio"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="end">Fin:</label>
+                                <input type="text"
+                                        ngModel="{{editExperience?.end}}"
+                                        name="end"
+                                        class="form-control"
+                                        id="end"
+                                        placeholder="Fin"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Descripción:</label>
+                                <input type="text"
+                                        ngModel="{{editExperience?.description}}"
+                                        name="description"
+                                        class="form-control"
+                                        id="description"
+                                        placeholder="Descripción"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="url_photo">URL de imagen:</label>
+                                <input type="text"
+                                        ngModel="{{editExperience?.url_photo}}"
+                                        name="url_photo"
+                                        class="form-control"
+                                        id="url_photo"
+                                        placeholder="URL de imagen"
+                                        >
+                            </div>
+                            <div class="modal-footer">
+                                <button
+                                        type="button"
+                                        id="add-education-form"
+                                        class="btn btn-secondary"
+                                        data-bs-dismiss="modal"
+                                        >
+                                        Cerrar
+                                </button>
+                                <button
+                                        type="submit"
+                                        class="btn btn-primary"
+                                        >
+                                        Añadir cambios
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!--Modal Delete Experience-->
+    <div    
+        class="modal fade" 
+        id="deleteExperienceModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="deleteExperienceModalLabel" 
+        aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 
+                            class="modal-title" 
+                            id="deleteExperienceModalLabel">
+                            Borrar experincia
+                        </h5>
+                        <button
+                            type="button btn-close"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="close"
+                            ></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>¿Está seguro de borrar?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button
+                                type="button"
+                                id="delete-experience-form"
+                                class="btn btn-secondary"
+                                data-bs-dismiss="modal"
+                                >
+                                Cerrar
+                        </button>
+                        <button
+                                (click)="onDeleteExperience(deleteExperience!.id)"
+                                data-bs-dismiss="modal"
+                                class="btn btn-danger"
+                                >
+                                Aceptar
+                        </button>
+                    </div>
+                </div>
+            </div>
+    </div> 
+<!--ALERT MESSAGE - EDUCATIONS NOT FOUND-->
+    <div *ngIf="experience?.length == 0" class="col-lg-3 col-md-11 col-x1-2 text-center">
+        <div class="alert alert-info" role="alert">
+            <h4 class="alert-heading">NO HAY EDUCACIONES</h4>
+        </div>
     </div>
 </section>
