--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -180,7 +180,7 @@
                             ></button>
                     </div>
                     <div class="modal-body">
-                        <form #addForm="ngForm" (ngSubmit)="onAddEducation(addForm)">
+                        <form #editForm="ngForm">
                             <div class="form-group">
                                 <label for="schoolName">Nombre de institución:</label>
                                 <input type="text"
