--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -180,7 +180,7 @@
                             ></button>
                     </div>
                     <div class="modal-body">
-                        <form #addForm="ngForm" (ngSubmit)="onAddExperience(addForm)">
+                        <form #editForm="ngForm">
                             <div class="form-group">
                                 <label for="companyName">Nombre de la compañia:</label>
                                 <input type="text"
